with several documents

--- a/Lexical_Analyzer/Lexical_Analyzer/Lexical_Analyzer.vcxproj.filters
+++ b/Lexical_Analyzer/Lexical_Analyzer/Lexical_Analyzer.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="Automata.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Preprocessor.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Buffer.cpp">
@@ -36,6 +39,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="main.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Preprocessor.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
