--- a/Lexical_Analyzer/Lexical_Analyzer/Lexical_Analyzer.vcxproj.filters
+++ b/Lexical_Analyzer/Lexical_Analyzer/Lexical_Analyzer.vcxproj.filters
@@ -24,9 +24,6 @@
     <ClInclude Include="Automata.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="Preprocessor.hpp">
-      <Filter>头文件</Filter>
-    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Buffer.cpp">
@@ -41,7 +38,13 @@
     <ClCompile Include="main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="Preprocessor.cpp">
+    <ClCompile Include="ErrorSolution.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="ReturnSolution.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="RecognitionSolution.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
